# facedet

./: .gitignore  README.compile  configure.ac
doc/: Makefile.am  presentation.tex
src/: .gitignore  Makefile.am  common.c  common.h  facedet.c  facedet.h
